--- a/src/main/resources/assets/breamaterial/lang/zh_cn.json
+++ b/src/main/resources/assets/breamaterial/lang/zh_cn.json
@@ -1,5 +1,5 @@
 {
   "brea.metal.material.#unknown": "未知材料",
   "brea.metal.mit.brea.ingot": "锭",
-  "tab.brea.metal.default": "崩解核心 金属 预注册物品"
+  "tab.brea.metal.default": "崩解核心-金属 普通物品"
 }
